@@ -1,21 +1,0 @@
-\name{loadICdata}
-\alias{loadICdata}
-\title{Load IC data}
-\usage{
-  loadICdata(organism, ont)
-}
-\arguments{
-  \item{organism}{"human"}
-
-  \item{ont}{"DO"}
-}
-\value{
-  NULL
-}
-\description{
-  Load Information Content data to DOSEEnv environment
-}
-\author{
-  Guangchuang Yu \url{http://ygc.name}
-}
-
