@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.3.2
 ------------------------
+ o remove wangMethod, infoContentMethod and combineScores, 
+   import them from GOSemSim. <2012-06,14, Thu>
  o optimize setReadable <2012-05-09, Wed>
  o bug fixed of setReadable method. For those unmapped genes, return the original gene ID. <2012-05-15, Tue>
  o fill color in barplot for Ontology classification. <2012-05-22, Tue>
